--- a/www/index.html
+++ b/www/index.html
@@ -31,10 +31,12 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/directives.js"></script>
     <script src="js/controllers.js"></script>
   </head>
 
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
   </body>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDLbfddvXsbJ4AAfmbE7hRUfMrhPLTk2Ts"></script>
 </html>
