adding slick-carousel
angular-slick-carousel needs to be installed via bower prior to use

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,15 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- slick carousel -->
+    <link rel="stylesheet" href="lib/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="lib/slick-carousel/slick/slick-theme.css">
+
+    <script src="lib/jquery/dist/jquery.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/slick-carousel/slick/slick.js"></script>
+    <script src="lib/angular-slick-carousel/dist/angular-slick.min.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
