--- a/www/index.html
+++ b/www/index.html
@@ -39,16 +39,19 @@
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
+    <script src="lib/ngmap/build/scripts/ng-map.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/utilities.js"></script>
     <script src="js/app.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
+
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDLbfddvXsbJ4AAfmbE7hRUfMrhPLTk2Ts"></script>
   </head>
 
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
   </body>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDLbfddvXsbJ4AAfmbE7hRUfMrhPLTk2Ts"></script>
 </html>
