--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
 
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDLbfddvXsbJ4AAfmbE7hRUfMrhPLTk2Ts"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&key=AIzaSyDLbfddvXsbJ4AAfmbE7hRUfMrhPLTk2Ts"></script>
   </head>
 
   <body ng-app="starter">
